--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
- heroku config:set WEBAPP_RUNNER_OPTS="--enable-naming --context-xml=path/to/context.xml"
+web: java $JAVA_OPTS -jar target/heroku-demo-0.0.1-SNAPSHOT.jar -Dserver.port=$PORT
